# pydsx

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
C and Cpp/Array Vector/: a.out  array.cpp  searcharray.cpp
C and Cpp/Recursion/: README.md  recursion  recursion.c
Unidade_I/: README.md
Unidade_I/Listas_simplesmente_encadeada/: linkedList-Head.c
data_structures/: README.md  __init__.py
data_structures/binary_search_tree/: binary_search_tree.py
pydsx/: __init__.py
pydsx/binary_search_tree/: __init__.py  binary_search_tree.py
pydsx/singly_linked_list/: __init__.py  linked_list.py
python/: README.md
python-data-structure/: Makefile  README.md  requirements.txt
python-data-structure/data_structures/: __init__.py
python-data-structure/data_structures/binary_search_tree/: binary_search_tree.py
python-data-structure/data_structures/single_linked_list/: __init__.py  linked_list.py
python-data-structure/data_structures/singly_linked_list/: linked_list.py
python-data-structure/tests/: test_binary_search_tree.py  test_linked_list.py
python/Data structure/array/: DynamicArray.py  isAnagram.py
python/array/: ArrayPariSum.py  DynamicArray.py  isAnagram.py  missingElementInArray.py
python/linked lists/: doublylinkedlist.py
python/project-codes/: README.md
python/recursion/: coinChange.py  recusion.py
python/stacks queues and deque/: deque.py  queue.py  queue2stack.py  queueQuestion.py  stacks.py
tests/: test_binary_search_tree.py  test_data_structures.py  test_linked_list.py
(+7 files in other folders)
