[tool.poetry]
name = "pydsx"
version = "0.1.0"
description = "Data structures in python to use in some projects <Matheus Francisco>"
authors = ["matheusfrancisco <matheusmachadoufsc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
